# pitchperfect-rupeezy

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  eval.md  hack-questions.md  plan.md  pyproject.toml  tech.md  useful.sql
api/: __init__.py  auth.py  providers.py  server.py
deliverables/: DEPLOY.md  README.md  build_deck.js  loom_script.md  package-lock.json  package.json  rupeezy_voice_agent_deck.pptx
deliverables/remotion-explainer/: package-lock.json  package.json
scripts/: seed_demo_data.py  tamil.sh  test_twilio_call.py  test_whatsapp.py
skills/clinic_appointment/: greeting.md  manifest.yaml  objections.yaml  prompt.md  rubric.yaml  tools.yaml  voice_defaults.yaml
skills/cod_confirmation/: greeting.md  manifest.yaml  objections.yaml  prompt.md  rubric.yaml  tools.yaml  voice_defaults.yaml
skills/cold_outbound/: greeting.md  manifest.yaml  objections.yaml  prompt.md  rubric.yaml  tools.yaml  voice_defaults.yaml
skills/lead_conversion/: greeting.md  manifest.yaml  objections.yaml  prompt.md  rubric.yaml  tools.yaml  voice_defaults.yaml
src/voice_agents/: __init__.py  agent.py  analyzer.py  conversation_logger.py  db.py  dial_daily.py  dispatch_call.py  handoff.py  mlflow_prompts.py  mlflow_tracker.py  phone.py  pipecat_bot.py  pipecat_logger.py  prompts.py  skills.py  twilio_bot.py  twilio_dial.py
tests/: conftest.py  test_analyzer_prompt.py  test_prompts.py  test_skills.py
ui/: README.md  next.config.mjs  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: aura-visualizer.tsx  header.tsx  pipeline.tsx  shell.tsx  sidebar.tsx  sw-cleanup.tsx  (+1 more)
(+23 files in other folders)
